# forever-rss

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  jest.config.js  jest.config.ts  main.py  netlify.toml  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: cicd.yml  main.yml
api/: entries.ts  user-add-feed.ts  user-list-feeds.ts
forever-rss/web/: package.json
forever_rss/: __main__.py  app.py  config.py  security.py
forever_rss/database/: crud_user.py  db.py
forever_rss/models/: UserModel.py
forever_rss/routes/: oauth.py  user.py
forever_rss/schemas/: AuthSchema.py  FeedSchema.py  UserSchema.py
forever_rss/services/: github.py
forever_rss/web/: index.html  package.json  tsconfig.json  vite.config.ts
migrations/versions/: 574091654ef2_create_users_table.py
netlify/functions/: entries.js  feed.js  feeds.js
public/: index.html  manifest.json
src/: App.css  App.js  App.tsx  Content.js  Controls.js  ControlsContent.tsx  Entries.js  Feeds.js  FeedsContext.js  Header.js  Header.tsx  RssEntries.js  config.ts  feed-utils.test.js  feed-utils.test.ts  feed-utils.ts  function-utils.test.ts  function-utils.ts  index.js  logger.js  styles.js  styles.ts  utils.js  utils.test.ts  utils.ts
src/components/: Content.js  Content.style.ts  Content.tsx  Controls.js  ControlsContent.tsx  EntriesList.js  EntriesList.test.js  EntriesList.test.ts  EntriesList.tsx  FeedsList.js  FeedsList.tsx  Footer.tsx  Header.style.ts  Header.tsx  TitleScreenContent.tsx
src/context/: AuthContext.js  FeedsContext.js
(+74 files in other folders)
